--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="pindex.js"></script>
+    <link rel="stylesheet" href="pstyle.css">
 </head>
 <body>
     <h1>Async JS and Ajax</h1>
+    <main class="hero">
+
+        <div class="inline-search-bar">
+            <input type="text" class="search" placeholder="Search for any country"/>
+            <button type="button" class="search-btn">Ara</button>
+        </div>
+        <div class="countries"></div>
+        <div class="adjance">
+            <h1>Adjacance countries</h1>
+            <div class="adjacentCountries"></div>
+        </div>
+    </main>
+    <script src="pindex.js"></script>
 </body>
 </html>
