Add structured category and subcategory lists for courses Enforce category/subcategory selection from predefined lists Refactor Course object to include category and subcategory validation Update course data to match new structure

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -43,27 +43,22 @@
       </div>
       <div class="search_bar_container">
         <div class="dropdown_menu">
-          <div class="dropdown_menu">
-            <select class="category-select" id="main-category">
-              <option value="" disabled selected>Kategoriyalar</option>
-              <option value="all">Hamısı</option>
-              <option value="programming">Proqramlaşdırma</option>
-              <option value="teaching-certification">
-                Müəllimlik Sertifikasiyası İmtahanına Hazırlıq
-              </option>
-              <option value="student-exam">Milli İmtahana Hazırlıq</option>
-              <option value="student-courses">Tələbələr üçün Kurslar</option>
-            </select>
-            <select
-              class="subcategory-select"
-              id="subcategory"
-              style="display: none"
-            >
-              <!-- Dinamik olaraq JS ilə doldurulacaq -->
-            </select>
-          </div>
+          <select class="category-select" id="main-category">
+            <option value="" disabled selected>Kategoriyalar</option>
+            <option value="all">Hamısı</option>
+            <option value="programming">Proqramlaşdırma</option>
+            <option value="teaching-certification">
+              Müəllimlik Sertifikasiyası İmtahanına Hazırlıq
+            </option>
+            <option value="student-exam">Milli İmtahana Hazırlıq</option>
+            <option value="student-courses">Tələbələr üçün Kurslar</option>
+          </select>
         </div>
-        <input type="text" class="search_bar" placeholder="Search here ..." />
+        <input
+          type="text"
+          class="search_bar"
+          placeholder="Burada axtarın ..."
+        />
         <i class="fa-solid fa-magnifying-glass"></i>
       </div>
       <div class="icons">
@@ -76,15 +71,15 @@
       <section class="hero">
         <i id="chevron-left" class="fa-solid fa-chevron-left"></i>
         <div class="hero_text">
-          <h1>Master AI & Technology Skills</h1>
+          <h1>Karyeranıza Güc Qatın!</h1>
           <p>
-            Learn cutting-edge technologies with hands-on projects and expert
-            guidance.
+            Müasir proqramlaşdırma, müəllimlik və tələbə kursları ilə
+            biliklərinizi artırın, uğura doğru addımlayın.
           </p>
-          <button>Explore Courses</button>
+          <button>Kurslara Bax</button>
         </div>
         <div class="hero_image">
-          <img src="/images/hero/hero_ai.jpg" alt="no found" />
+          <img src="/images/hero/student-success.webp" alt="no found" />
         </div>
         <i id="chevron-right" class="fa-solid fa-chevron-right"></i>
       </section>
@@ -189,20 +184,20 @@
       <div class="newsletter-section">
         <div class="newsletter-container">
           <div class="newsletter-content">
-            <h3>Stay Updated with Latest Courses</h3>
+            <h3>Ən Son Kurslardan Xəbərdar Olun</h3>
             <p>
-              Get exclusive access to new courses, tips, and industry insights
-              delivered to your inbox.
+              Yeni kurslar, faydalı məsləhətlər və sahə yenilikləri barədə
+              eksklüziv məlumatları e-poçtunuza əldə edin.
             </p>
           </div>
           <div class="newsletter-form">
             <input
               type="email"
-              placeholder="Enter your email address"
+              placeholder="E-poçt ünvanınızı daxil edin"
               class="newsletter-input"
             />
             <button class="newsletter-btn">
-              <span>Subscribe</span>
+              <span>Abunə ol</span>
               <i class="fa-solid fa-arrow-right"></i>
             </button>
           </div>
@@ -221,9 +216,9 @@
               <h3>SkillSprint</h3>
             </div>
             <p class="brand-description">
-              Empowering learners with practical skills and real-world
-              experience. Join thousands of students who have transformed their
-              careers with our courses.
+              Tələbələri praktiki bacarıqlar və real dünya təcrübəsi ilə
+              gücləndiririk. Kurslarımızla karyerasını dəyişən minlərlə tələbəyə
+              qoşulun.
             </p>
             <div class="social-links">
               <a href="#" aria-label="Facebook" class="social-link">
@@ -246,31 +241,31 @@
 
           <!-- Quick Links -->
           <div class="footer-section">
-            <h4>Quick Links</h4>
+            <h4>Sürətli Linklər</h4>
             <ul class="footer-links">
               <li>
                 <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> About Us</a
+                  ><i class="fa-solid fa-chevron-right"></i> Haqqımızda</a
                 >
               </li>
               <li>
                 <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Our Courses</a
+                  ><i class="fa-solid fa-chevron-right"></i> Kurslarımız</a
                 >
               </li>
               <li>
                 <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Pricing</a
+                  ><i class="fa-solid fa-chevron-right"></i> Qiymətlər</a
                 >
               </li>
               <li>
                 <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Success Stories</a
+                  ><i class="fa-solid fa-chevron-right"></i> Uğur Hekayələri</a
                 >
               </li>
               <li>
                 <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Career Support</a
+                  ><i class="fa-solid fa-chevron-right"></i> Karyera Dəstəyi</a
                 >
               </li>
             </ul>
@@ -313,31 +308,31 @@
 
           <!-- Support -->
           <div class="footer-section">
-            <h4>Support & Resources</h4>
+            <h4>Dəstək və Resurslar</h4>
             <ul class="footer-links">
               <li>
                 <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Help Center</a
+                  ><i class="fa-solid fa-chevron-right"></i> Yardım Mərkəzi</a
                 >
               </li>
               <li>
                 <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Community Forum</a
+                  ><i class="fa-solid fa-chevron-right"></i> İcma Forumu</a
                 >
               </li>
               <li>
                 <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Documentation</a
+                  ><i class="fa-solid fa-chevron-right"></i> Sənədləşmə</a
                 >
               </li>
               <li>
                 <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Contact Support</a
+                  ><i class="fa-solid fa-chevron-right"></i> Dəstək ilə Əlaqə</a
                 >
               </li>
               <li>
                 <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> System Status</a
+                  ><i class="fa-solid fa-chevron-right"></i> Sistem Statusu</a
                 >
               </li>
             </ul>
@@ -351,21 +346,23 @@
                 <i class="fa-solid fa-envelope"></i>
                 <div>
                   <span>Email</span>
-                  <a href="mailto:info@skillsprint.com">info@skillsprint.com</a>
+                  <a href="mailto:info@skillsprint.com"
+                    >erbeacademy1@gmail.com</a
+                  >
                 </div>
               </div>
               <div class="contact-item">
                 <i class="fa-solid fa-phone"></i>
                 <div>
                   <span>Phone</span>
-                  <a href="tel:+15551234567">+1 (555) 123-4567</a>
+                  <a href="tel:+15551234567">+995 599066546</a>
                 </div>
               </div>
               <div class="contact-item">
                 <i class="fa-solid fa-location-dot"></i>
                 <div>
                   <span>Address</span>
-                  <span>123 Education St, Learning City, LC 12345</span>
+                  <span>Tbilisi Georgia</span>
                 </div>
               </div>
             </div>
@@ -400,6 +397,6 @@
       </div>
     </footer>
     <script src="/javascript/hero.js" type="module"></script>
-    <script src="/javascript/career.js" type="module"></script>
+    <!-- <script src="/javascript/career.js" type="module"></script> -->
   </body>
 </html>
