--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="pstyle.css">
-</head>
-<body>
-    <h1>Async JS and Ajax</h1>
+    <link rel="stylesheet" href="pstyle.css" />
+    <link rel="stylesheet" href="./styles/header.css" />
+  </head>
+  <body>
+    <header></header>
+    <h1>Promises</h1>
     <main class="hero">
-
-        <div class="inline-search-bar">
-            <input type="text" class="search" placeholder="Search for any country"/>
-            <button type="button" class="search-btn">Ara</button>
-        </div>
-        <div class="countries"></div>
-        <div class="adjance">
-            <h1>Adjacance countries</h1>
-            <div class="adjacentCountries"></div>
-        </div>
+      <div class="inline-search-bar">
+        <input
+          type="text"
+          class="search"
+          placeholder="Search for any country"
+        />
+        <button type="button" class="search-btn">Ara</button>
+      </div>
+      <div class="countries"></div>
+      <div class="adjance">
+        <h1>Adjacance countries</h1>
+        <div class="adjacentCountries"></div>
+      </div>
     </main>
     <script src="pindex.js"></script>
-</body>
+  </body>
 </html>
