Added horizontal scroll carousel to the courses section

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/styles/header.css" />
     <link rel="stylesheet" href="/styles/hero.css" />
     <link rel="stylesheet" href="/styles/career.css" />
+    <link rel="stylesheet" href="/styles/courses.css" />
     <link rel="stylesheet" href="/styles/tutors.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
     <link
@@ -94,44 +95,45 @@
         </div>
       </section>
 
-      <section class="courses-section">
-        <div class="courses-container">
-          <div class="courses-container">
-            <div class="course-card">
-              <div class="course-icon">
-                <i class="fa-solid fa-code"></i>
-              </div>
-              <h3>Proqramlaşdırma</h3>
-              <p>
-                Python, JavaScript və veb texnologiyaları üzrə praktiki dərslər,
-                real layihələrlə öyrənmə imkanı. Müasir proqramlaşdırma
-                bacarıqlarını inkişaf etdir!
-              </p>
+      <section class="categories-section">
+        <div class="category-container">
+          <div class="category-card">
+            <div class="category-icon">
+              <i class="fa-solid fa-code"></i>
             </div>
+            <h3>Proqramlaşdırma</h3>
+            <p>
+              Python, JavaScript və veb texnologiyaları üzrə praktiki dərslər,
+              real layihələrlə öyrənmə imkanı. Müasir proqramlaşdırma
+              bacarıqlarını inkişaf etdir!
+            </p>
+          </div>
 
-            <div class="course-card">
-              <div class="course-icon">
-                <i class="fa-solid fa-graduation-cap"></i>
-              </div>
-              <h3>Müəllim Sertifikasiyası</h3>
-              <p>
-                Müəllimlik sertifikasiyası imtahanlarına tam hazırlıq, nümunə
-                testlər və peşəkar mentor dəstəyi ilə uğura doğru addımla!
-              </p>
+          <div class="category-card">
+            <div class="category-icon">
+              <i class="fa-solid fa-graduation-cap"></i>
             </div>
+            <h3>Müəllim Sertifikasiyası</h3>
+            <p>
+              Müəllimlik sertifikasiyası imtahanlarına tam hazırlıq, nümunə
+              testlər və peşəkar mentor dəstəyi ilə uğura doğru addımla!
+            </p>
+          </div>
 
-            <div class="course-card">
-              <div class="course-icon">
-                <i class="fa-solid fa-user-graduate"></i>
-              </div>
-              <h3>Tələbələrə Özəl Kurslar</h3>
-              <p>
-                Riyaziyyat, biologiya və ingilis dili üzrə xüsusi dərslər,
-                imtahanlara hazırlıq və fərdi inkişaf üçün ən yaxşı seçim!
-              </p>
+          <div class="category-card">
+            <div class="category-icon">
+              <i class="fa-solid fa-user-graduate"></i>
             </div>
+            <h3>Tələbələrə Özəl Kurslar</h3>
+            <p>
+              Riyaziyyat, biologiya və ingilis dili üzrə xüsusi dərslər,
+              imtahanlara hazırlıq və fərdi inkişaf üçün ən yaxşı seçim!
+            </p>
           </div>
         </div>
+      </section>
+      <section class="courses">
+        <div class="course-wrapper"></div>
       </section>
       <!-- Instructors Section START -->
       <section class="instructors-section">
@@ -396,7 +398,7 @@
         </div>
       </div>
     </footer>
-    <script src="/javascript/hero.js" type="module"></script>
+    <script src="/javascript/course_Carusel.js" type="module"></script>
     <!-- <script src="/javascript/career.js" type="module"></script> -->
   </body>
 </html>
