--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,12 +5,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="/styles/general_styles.css" />
     <link rel="stylesheet" href="/styles/variables.css" />
-    <link rel="stylesheet" href="/styles/header.css" />
+
     <link rel="stylesheet" href="/styles/hero.css" />
     <link rel="stylesheet" href="/styles/career.css" />
     <link rel="stylesheet" href="/styles/courses.css" />
     <link rel="stylesheet" href="/styles/tutors.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
+    <link rel="stylesheet" href="/styles/header.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
       rel="stylesheet"
@@ -28,9 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap"
       rel="stylesheet"
     />
-
-    <script src="/javascript/header.js"></script>
-    <script src="/javascript/auth-loader.js"></script>
+    <style></style>
   </head>
   <body>
     <header>
@@ -42,26 +41,24 @@
           <p class="logo-name">eRBe</p>
         </div>
       </div>
-      <div class="search_bar_container">
+      <nav class="navbar-container">
+        <div class="about-us">Haqqimizda</div>
+        <div class="contact">Kontakt</div>
         <div class="dropdown_menu">
-          <select class="category-select" id="main-category">
-            <option value="" disabled selected>Kategoriyalar</option>
-            <option value="all">Hamısı</option>
-            <option value="programming">Proqramlaşdırma</option>
-            <option value="teaching-certification">
+          <div class="fake-select-category-container">
+            <p class="selected-category-name">Kategoriyalar</p>
+            <i class="fa-solid fa-chevron-down"></i>
+          </div>
+          <ul class="fake-dropdown-menu">
+            <li class="category">Programlaşdırma</li>
+            <li class="category">
               Müəllimlik Sertifikasiyası İmtahanına Hazırlıq
-            </option>
-            <option value="student-exam">Milli İmtahana Hazırlıq</option>
-            <option value="student-courses">Tələbələr üçün Kurslar</option>
-          </select>
+            </li>
+            <li class="category">Milli İmtahana Hazırlıq</li>
+            <li class="category">Tələbələr üçün Kurslar</li>
+          </ul>
         </div>
-        <input
-          type="text"
-          class="search_bar"
-          placeholder="Burada axtarın ..."
-        />
-        <i class="fa-solid fa-magnifying-glass"></i>
-      </div>
+      </nav>
       <div class="icons">
         <i id="cart_icon" class="fa-solid fa-basket-shopping"></i>
         <i id="wishlist_icon" class="fa-solid fa-heart"></i>
@@ -398,7 +395,9 @@
         </div>
       </div>
     </footer>
+    <script src="/javascript/headerFiles/header.js" type="module"></script>
+    <script src="/javascript/auth-loader.js"></script>
     <script src="/javascript/course_Carusel.js" type="module"></script>
-    <!-- <script src="/javascript/career.js" type="module"></script> -->
+    <script src="/javascript/hero.js"></script>
   </body>
 </html>
