refactor: move header content into header.html and fetch in all files, remove wishlist

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,39 +31,7 @@
     />
   </head>
   <body>
-    <header>
-      <div class="hamburger_menu">
-        <i class="fa-solid fa-bars"></i>
-      </div>
-      <div class="logo">
-        <div class="logo-text">
-          <p class="logo-name">eRBe</p>
-        </div>
-      </div>
-      <nav class="navbar-container">
-        <div class="about-us">Haqqimizda</div>
-        <div class="contact">Kontakt</div>
-        <div class="dropdown_menu">
-          <div class="fake-select-category-container">
-            <p class="selected-category-name">Kategoriyalar</p>
-            <i class="fa-solid fa-chevron-down"></i>
-          </div>
-          <ul class="fake-dropdown-menu">
-            <li class="category">Programlaşdırma</li>
-            <li class="category">
-              Müəllimlik Sertifikasiyası İmtahanına Hazırlıq
-            </li>
-            <li class="category">Milli İmtahana Hazırlıq</li>
-            <li class="category">Tələbələr üçün Kurslar</li>
-          </ul>
-        </div>
-      </nav>
-      <div class="icons">
-        <i id="cart_icon" class="fa-solid fa-basket-shopping"></i>
-        <i id="wishlist_icon" class="fa-solid fa-heart"></i>
-        <i id="user_icon" class="fa-solid fa-circle-user"></i>
-      </div>
-    </header>
+    <header></header>
     <main class="main">
       <section class="hero">
         <i id="chevron-left" class="fa-solid fa-chevron-left"></i>
