feat: enable filtering by selected category from header dropdown and smooth scroll to courses section

--- a/HTML/header.html
+++ b/HTML/header.html
@@ -15,10 +15,16 @@
       <i class="fa-solid fa-chevron-down"></i>
     </div>
     <ul class="fake-dropdown-menu">
-      <li class="category">Programlaşdırma</li>
-      <li class="category">Müəllimlik Sertifikasiyası İmtahanına Hazırlıq</li>
-      <li class="category">Milli İmtahana Hazırlıq</li>
-      <li class="category">Tələbələr üçün Kurslar</li>
+      <li class="category" data-category="programming">Programlaşdırma</li>
+      <li class="category" data-category="teaching-certification">
+        Müəllimlik Sertifikasiyası İmtahanına Hazırlıq
+      </li>
+      <li class="category" data-category="student-exam">
+        Milli İmtahana Hazırlıq
+      </li>
+      <li class="category" data-category="student-courses">
+        Tələbələr üçün Kurslar
+      </li>
     </ul>
   </div>
 </nav>
