--- a/HTML/index.html
+++ b/HTML/index.html
@@ -364,7 +364,8 @@
     </footer>
     <script src="/javascript/headerFiles/header.js" type="module"></script>
     <script src="/javascript/auth-loader.js"></script>
-    <script src="/javascript/course_Carusel.js" type="module"></script>
+    <!-- <script src="/javascript/course_Carusel.js" type="module"></script> -->
     <script src="/javascript/hero.js"></script>
+    <script src="/javascript/index.js"></script>
   </body>
 </html>
