--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,15 +3,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/general_styles.css" />
-    <link rel="stylesheet" href="/styles/variables.css" />
-
-    <link rel="stylesheet" href="/styles/hero.css" />
-    <link rel="stylesheet" href="/styles/career.css" />
-    <link rel="stylesheet" href="/styles/courses.css" />
-    <link rel="stylesheet" href="/styles/tutors.css" />
-    <link rel="stylesheet" href="/styles/footer.css" />
     <link rel="stylesheet" href="/styles/header.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/footer.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
       rel="stylesheet"
