Removed backend files as they are no longer needed

--- a/HTML/course.html
+++ b/HTML/course.html
@@ -5,10 +5,10 @@
     <title>Kurs Detalları - ERBE Academy</title>
 
     <!-- CSS Files -->
-    <link rel="stylesheet" href="/styles/header.css" />
-    <link rel="stylesheet" href="/styles/general_styles.css" />
-    <link rel="stylesheet" href="/styles/footer.css" />
-    <link rel="stylesheet" href="/styles/course-page.css" />
+    <link rel="stylesheet" href="../styles/headerStyles/header.css" />
+    <link rel="stylesheet" href="../styles/general_styles.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="../styles/course-page.css" />
 
     <!-- External Libraries -->
     <link
