--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/header.css" />
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="./styles/headerStyles/header.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
 
     <link
@@ -359,8 +359,6 @@
     </footer>
     <script src="/javascript/headerFiles/header.js" type="module"></script>
     <script src="/javascript/auth-loader.js"></script>
-    <!-- <script src="/javascript/course_Carusel.js" type="module"></script> -->
-    <script src="/javascript/hero.js"></script>
-    <script src="/javascript/index.js"></script>
+    <script src="/javascript/mainSections/hero.js"></script>
   </body>
 </html>
