Created About Us page (HTML, CSS) and integrated a dynamically loaded footer across all pages using footer.js

--- a/HTML/course.html
+++ b/HTML/course.html
@@ -352,5 +352,6 @@
     <!-- Scripts -->
     <script src="/javascript/headerFiles/header.js" type="module"></script>
     <script src="/javascript/course-page.js"></script>
+    <script src="/javascript/footer.js"></script>
   </body>
 </html>
