--- a/index.html
+++ b/index.html
@@ -140,225 +140,10 @@
       </section>
       <!-- Instructors Section END -->
     </main>
-    <footer class="footer">
-      <!-- Newsletter Section -->
-      <div class="newsletter-section">
-        <div class="newsletter-container">
-          <div class="newsletter-content">
-            <h3>Ən Son Kurslardan Xəbərdar Olun</h3>
-            <p>
-              Yeni kurslar, faydalı məsləhətlər və sahə yenilikləri barədə
-              eksklüziv məlumatları e-poçtunuza əldə edin.
-            </p>
-          </div>
-          <div class="newsletter-form">
-            <input
-              type="email"
-              placeholder="E-poçt ünvanınızı daxil edin"
-              class="newsletter-input"
-            />
-            <button class="newsletter-btn">
-              <span>Abunə ol</span>
-              <i class="fa-solid fa-arrow-right"></i>
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <!-- Main Footer Content -->
-      <div class="footer-main">
-        <div class="footer-container">
-          <!-- Brand Section -->
-          <div class="footer-brand">
-            <div class="footer-logo">
-              <div class="logo-icon">
-                <i class="fa-solid fa-graduation-cap"></i>
-              </div>
-              <h3>SkillSprint</h3>
-            </div>
-            <p class="brand-description">
-              Tələbələri praktiki bacarıqlar və real dünya təcrübəsi ilə
-              gücləndiririk. Kurslarımızla karyerasını dəyişən minlərlə tələbəyə
-              qoşulun.
-            </p>
-            <div class="social-links">
-              <a href="#" aria-label="Facebook" class="social-link">
-                <i class="fa-brands fa-facebook-f"></i>
-              </a>
-              <a href="#" aria-label="Twitter" class="social-link">
-                <i class="fa-brands fa-x-twitter"></i>
-              </a>
-              <a href="#" aria-label="Instagram" class="social-link">
-                <i class="fa-brands fa-instagram"></i>
-              </a>
-              <a href="#" aria-label="LinkedIn" class="social-link">
-                <i class="fa-brands fa-linkedin-in"></i>
-              </a>
-              <a href="#" aria-label="YouTube" class="social-link">
-                <i class="fa-brands fa-youtube"></i>
-              </a>
-            </div>
-          </div>
-
-          <!-- Quick Links -->
-          <div class="footer-section">
-            <h4>Sürətli Linklər</h4>
-            <ul class="footer-links">
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Haqqımızda</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Kurslarımız</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Qiymətlər</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Uğur Hekayələri</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Karyera Dəstəyi</a
-                >
-              </li>
-            </ul>
-          </div>
-
-          <!-- Courses -->
-          <div class="footer-section">
-            <h4>Popular Courses</h4>
-            <ul class="footer-links">
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> JavaScript
-                  Mastery</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> HTML/CSS
-                  Fundamentals</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> ICT Literacy</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Advanced
-                  Mathematics</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> English Language</a
-                >
-              </li>
-            </ul>
-          </div>
-
-          <!-- Support -->
-          <div class="footer-section">
-            <h4>Dəstək və Resurslar</h4>
-            <ul class="footer-links">
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Yardım Mərkəzi</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> İcma Forumu</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Sənədləşmə</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Dəstək ilə Əlaqə</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fa-solid fa-chevron-right"></i> Sistem Statusu</a
-                >
-              </li>
-            </ul>
-          </div>
-
-          <!-- Contact Info -->
-          <div class="footer-section contact-section">
-            <h4>Get in Touch</h4>
-            <div class="contact-info">
-              <div class="contact-item">
-                <i class="fa-solid fa-envelope"></i>
-                <div>
-                  <span>Email</span>
-                  <a href="mailto:info@skillsprint.com"
-                    >erbeacademy1@gmail.com</a
-                  >
-                </div>
-              </div>
-              <div class="contact-item">
-                <i class="fa-solid fa-phone"></i>
-                <div>
-                  <span>Phone</span>
-                  <a href="tel:+15551234567">+995 599066546</a>
-                </div>
-              </div>
-              <div class="contact-item">
-                <i class="fa-solid fa-location-dot"></i>
-                <div>
-                  <span>Address</span>
-                  <span>Tbilisi Georgia</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Footer Bottom -->
-      <div class="footer-bottom">
-        <div class="footer-bottom-container">
-          <div class="footer-bottom-left">
-            <p>&copy; 2024 SkillSprint. All rights reserved.</p>
-          </div>
-          <div class="footer-bottom-right">
-            <div class="legal-links">
-              <a href="#">Privacy Policy</a>
-              <a href="#">Terms of Service</a>
-              <a href="#">Cookie Policy</a>
-              <a href="#">Refund Policy</a>
-            </div>
-            <div class="payment-methods">
-              <span>We Accept:</span>
-              <div class="payment-icons">
-                <i class="fa-brands fa-cc-visa"></i>
-                <i class="fa-brands fa-cc-mastercard"></i>
-                <i class="fa-brands fa-cc-paypal"></i>
-                <i class="fa-brands fa-cc-stripe"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+    <footer></footer>
     <script src="/javascript/headerFiles/header.js" type="module"></script>
     <script src="/javascript/auth-loader.js"></script>
     <script src="/javascript/mainSections/hero.js"></script>
+    <script src="/javascript/footer.js"></script>
   </body>
 </html>
