Created Contact page (HTML, CSS)

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </section>
       <!-- Instructors Section END -->
     </main>
-    <footer></footer>
+    <footer class="footer"></footer>
     <script src="/javascript/headerFiles/header.js" type="module"></script>
     <script src="/javascript/auth-loader.js"></script>
     <script src="/javascript/mainSections/hero.js"></script>
