feat: create renderCourseHeroSection function and make it dynamic based on course ID from query params
Commented out unused parts in course-page for cleanup and clarity.

--- a/HTML/course.html
+++ b/HTML/course.html
@@ -33,69 +33,7 @@
 
     <main class="main">
       <!-- Course Hero Section -->
-      <section class="course-hero">
-        <div class="course-hero-container">
-          <div class="course-hero-content">
-            <div class="breadcrumb">
-              <a href="/HTML/index.html">Ana Səhifə</a>
-              <i class="fa-solid fa-chevron-right"></i>
-              <a href="#">Kurslar</a>
-              <i class="fa-solid fa-chevron-right"></i>
-              <span>JavaScript Mastery</span>
-            </div>
-
-            <div class="course-hero-main">
-              <div class="course-hero-info">
-                <div class="course-category">
-                  <i class="fa-solid fa-code"></i>
-                  <span>Proqramlaşdırma</span>
-                </div>
-
-                <h1>JavaScript Mastery Kursu</h1>
-
-                <p class="course-description">
-                  JavaScript-in əsaslarından başlayaraq müasir veb inkişaf
-                  texnologiyalarına qədər hər şeyi öyrənin. Real layihələrlə
-                  praktiki təcrübə əldə edin və peşəkar veb developer olun.
-                </p>
-
-                <div class="course-meta">
-                  <div class="meta-item">
-                    <i class="fa-solid fa-clock"></i>
-                    <span>12 həftə</span>
-                  </div>
-                  <div class="meta-item">
-                    <i class="fa-solid fa-users"></i>
-                    <span>24 tələbə</span>
-                  </div>
-                  <div class="meta-item">
-                    <i class="fa-solid fa-star"></i>
-                    <span>4.9 (156 rəy)</span>
-                  </div>
-                  <div class="meta-item">
-                    <i class="fa-solid fa-language"></i>
-                    <span>Azərbaycan dili</span>
-                  </div>
-                </div>
-
-                <div class="course-price">
-                  <span class="current-price">₼299</span>
-                  <span class="original-price">₼399</span>
-                  <span class="discount">25% endirim</span>
-                </div>
-              </div>
-
-              <div class="course-hero-image">
-                <img src="/images/hero/hero_ai.jpg" alt="JavaScript Kursu" />
-                <div class="course-badge">
-                  <i class="fa-solid fa-fire"></i>
-                  <span>Populyar</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      <section class="course-hero"></section>
 
       <!-- Course Details Section -->
       <section class="course-details">
@@ -136,7 +74,7 @@
             </div>
 
             <!-- Curriculum Section -->
-            <div class="course-section">
+            <!-- <div class="course-section">
               <h2>Kurs Proqramı</h2>
               <div class="curriculum">
                 <div class="curriculum-module">
@@ -230,7 +168,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <!-- Instructor Section -->
             <div class="course-section">
@@ -250,7 +188,7 @@
                     Node.js texnologiyalarında ekspert. 100+ tələbəyə müəllimlik
                     etmişdir.
                   </p>
-                  <div class="instructor-stats">
+                  <!-- <div class="instructor-stats">
                     <div class="stat-item">
                       <span class="stat-number">5+</span>
                       <span class="stat-label">İl təcrübə</span>
@@ -263,7 +201,7 @@
                       <span class="stat-number">4.9</span>
                       <span class="stat-label">Reytinq</span>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -301,7 +239,7 @@
                 </div>
               </div>
 
-              <div class="course-stats">
+              <!-- <div class="course-stats">
                 <div class="stat-row">
                   <span>Kurs müddəti:</span>
                   <span>12 həftə</span>
@@ -318,24 +256,21 @@
                   <span>Dil:</span>
                   <span>Azərbaycan</span>
                 </div>
-              </div>
+              </div> -->
             </div>
 
             <!-- Related Courses -->
             <div class="related-courses">
               <h3>Əlaqəli Kurslar</h3>
               <div class="related-course-item">
-                <img src="/images/hero/hero_image2.png" alt="HTML/CSS Kursu" />
+                <img src="/images/courses/inf.png" alt="HTML/CSS Kursu" />
                 <div class="related-course-info">
                   <h4>HTML/CSS Fundamentals</h4>
                   <span class="related-course-price">₼199</span>
                 </div>
               </div>
               <div class="related-course-item">
-                <img
-                  src="/images/hero/student-success.webp"
-                  alt="React Kursu"
-                />
+                <img src="/images/courses/web.png" alt="React Kursu" />
                 <div class="related-course-info">
                   <h4>React Advanced</h4>
                   <span class="related-course-price">₼349</span>
@@ -351,7 +286,7 @@
 
     <!-- Scripts -->
     <script src="/javascript/headerFiles/header.js" type="module"></script>
-    <script src="/javascript/course-page.js"></script>
+    <script src="/javascript/course-page.js" type="module"></script>
     <script src="/javascript/footer.js"></script>
   </body>
 </html>
