--- a/index.html
+++ b/index.html
@@ -165,7 +165,10 @@
     <script src="/javascript/headerFiles/header.js" type="module"></script>
     <script src="/javascript/auth-files/auth-loader.js"></script>
     <script src="/javascript/mainSections/hero.js" type="module"></script>
-    <script src="/javascript/mainSections/courses_filter.js" type="module"></script>
+    <script
+      src="/javascript/mainSections/courses_filter.js"
+      type="module"
+    ></script>
     <script src="/javascript/footer.js"></script>
   </body>
 </html>
