--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
   </head>
   <body>
-    <header></header>
+    <header class="header"></header>
     <main class="main">
       <section class="hero">
         <i id="chevron-left" class="fa-solid fa-chevron-left"></i>
