feat(course-page): renderCurriculumAccordion dynamically using schedule data and refactor styles
Implemented renderCurriculumAccordion to generate the course accordion dynamically based on the schedule object.
Split course-page styles into modular sections and imported them into the centralized course-page.css.

--- a/HTML/course.html
+++ b/HTML/course.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/general_styles.css" />
     <link rel="stylesheet" href="../styles/footer.css" />
     <link rel="stylesheet" href="../styles/course-page.css" />
+    <link rel="stylesheet" href="../styles/course-page/course-page-hero.css" />
 
     <!-- External Libraries -->
     <link
@@ -74,101 +75,10 @@
             </div>
 
             <!-- Curriculum Section -->
-            <!-- <div class="course-section">
+            <div class="course-section">
               <h2>Kurs Proqramı</h2>
-              <div class="curriculum">
-                <div class="curriculum-module">
-                  <div class="module-header">
-                    <h3>Modul 1: JavaScript Əsasları</h3>
-                    <span class="module-duration">3 həftə</span>
-                  </div>
-                  <div class="module-lessons">
-                    <div class="lesson-item">
-                      <i class="fa-solid fa-play-circle"></i>
-                      <span>JavaScript sintaksisi və struktur</span>
-                      <span class="lesson-duration">45 dəq</span>
-                    </div>
-                    <div class="lesson-item">
-                      <i class="fa-solid fa-play-circle"></i>
-                      <span>Dəyişənlər və məlumat növləri</span>
-                      <span class="lesson-duration">60 dəq</span>
-                    </div>
-                    <div class="lesson-item">
-                      <i class="fa-solid fa-play-circle"></i>
-                      <span>Funksiyalar və obyektlər</span>
-                      <span class="lesson-duration">75 dəq</span>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="curriculum-module">
-                  <div class="module-header">
-                    <h3>Modul 2: DOM Manipulyasiyası</h3>
-                    <span class="module-duration">2 həftə</span>
-                  </div>
-                  <div class="module-lessons">
-                    <div class="lesson-item">
-                      <i class="fa-solid fa-play-circle"></i>
-                      <span>DOM elementləri ilə işləmə</span>
-                      <span class="lesson-duration">50 dəq</span>
-                    </div>
-                    <div class="lesson-item">
-                      <i class="fa-solid fa-play-circle"></i>
-                      <span>Event handling və listeners</span>
-                      <span class="lesson-duration">65 dəq</span>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="curriculum-module">
-                  <div class="module-header">
-                    <h3>Modul 3: Müasir JavaScript</h3>
-                    <span class="module-duration">4 həftə</span>
-                  </div>
-                  <div class="module-lessons">
-                    <div class="lesson-item">
-                      <i class="fa-solid fa-play-circle"></i>
-                      <span>ES6+ xüsusiyyətləri</span>
-                      <span class="lesson-duration">80 dəq</span>
-                    </div>
-                    <div class="lesson-item">
-                      <i class="fa-solid fa-play-circle"></i>
-                      <span>Async/Await və Promises</span>
-                      <span class="lesson-duration">70 dəq</span>
-                    </div>
-                    <div class="lesson-item">
-                      <i class="fa-solid fa-play-circle"></i>
-                      <span>API-lərlə işləmə</span>
-                      <span class="lesson-duration">90 dəq</span>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="curriculum-module">
-                  <div class="module-header">
-                    <h3>Modul 4: React Framework</h3>
-                    <span class="module-duration">3 həftə</span>
-                  </div>
-                  <div class="module-lessons">
-                    <div class="lesson-item">
-                      <i class="fa-solid fa-play-circle"></i>
-                      <span>React komponentləri</span>
-                      <span class="lesson-duration">85 dəq</span>
-                    </div>
-                    <div class="lesson-item">
-                      <i class="fa-solid fa-play-circle"></i>
-                      <span>State və Props idarəetməsi</span>
-                      <span class="lesson-duration">75 dəq</span>
-                    </div>
-                    <div class="lesson-item">
-                      <i class="fa-solid fa-play-circle"></i>
-                      <span>Real layihə: Todo App</span>
-                      <span class="lesson-duration">120 dəq</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div> -->
+              <div class="curriculum"></div>
+            </div>
 
             <!-- Instructor Section -->
             <div class="course-section">
